add channel names and aggregation

--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a7bde9146244079b04df006fc1c9432",
+       "model_id": "76f4c7921c444b379e7e08fc1a7195fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "3   vglut_B4_546     Th_B3_488   Nuclei  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,57 +179,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "row = filelist.iloc[0]\n",
-    "channel = int(row[[x.lower() == 'nuclei' for x in row]].index.item().replace('channel',''))-1\n",
-    "nchannels = 4\n",
-    "print(channel)\n",
-    "[ k for k  in range(nchannels) if k != channel ]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': 1, 'c0': 0, 'c1': 1, 'c2': 2, 'c3': 3}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "{'a':1, **{f'c{k}':k for k in range(4)}}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -238,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,22 +251,22 @@
     "    return rois\n",
     "\n",
     "\n",
-    "def preprocess(img):\n",
-    "    \"\"\"Preprocess the image before FISH intensity measurement\n",
+    "# def preprocess(img):\n",
+    "#     \"\"\"Preprocess the image before FISH intensity measurement\n",
     "\n",
-    "    Parameter\n",
-    "    ---------\n",
-    "    img : numpy.ndarray\n",
-    "        input image\n",
-    "    Result\n",
-    "    ------\n",
-    "    numpy.ndarray\n",
-    "        result\n",
-    "    \"\"\"\n",
-    "    img = img.astype(np.float32)\n",
-    "    d = ndi.gaussian_filter(img, 1) - ndi.gaussian_filter(img, 2)\n",
-    "    t = 1.48 * np.median(np.abs(d - np.median(d)))\n",
-    "    return np.maximum(0, d / t - 4)\n",
+    "#     Parameter\n",
+    "#     ---------\n",
+    "#     img : numpy.ndarray\n",
+    "#         input image\n",
+    "#     Result\n",
+    "#     ------\n",
+    "#     numpy.ndarray\n",
+    "#         result\n",
+    "#     \"\"\"\n",
+    "#     img = img.astype(np.float32)\n",
+    "#     d = ndi.gaussian_filter(img, 1) - ndi.gaussian_filter(img, 2)\n",
+    "#     t = 1.48 * np.median(np.abs(d - np.median(d)))\n",
+    "#     return np.maximum(0, d / t - 4)\n",
     "\n",
     "\n",
     "def preprocess(img):\n",
@@ -346,7 +295,10 @@
     "    return np.maximum(0, d / t - 4)\n",
     "\n",
     "\n",
-    "def record_intensity(labels, score, rois, channels):\n",
+    "def record_intensity(labels, score, rois, channel_str):\n",
+    "    \"\"\"\n",
+    "    Measure mean intensities in labels for each channels in score.\n",
+    "    \"\"\"\n",
     "    z, y, x = np.meshgrid(*[np.arange(n) for n in labels.shape])\n",
     "    dst = []\n",
     "    label_list = np.unique(labels)\n",
@@ -360,13 +312,13 @@
     "                \"y\": ma.MaskedArray(y, mask).mean(),\n",
     "                \"z\": ma.MaskedArray(z, mask).mean(),\n",
     "                \"area\": np.logical_not(mask).sum(),\n",
-    "                **{f'c{channels[k]}': ma.MaskedArray(score[0], mask).mean() for k in range(score.shape[0])},                \n",
+    "                **{channel_str[k]: ma.MaskedArray(score[k], mask).mean() for k in range(score.shape[0])},                \n",
     "            }\n",
     "        )\n",
     "    return pd.DataFrame.from_records(dst)\n",
     "\n",
     "\n",
-    "def process_item(row, resolution_level: int, model, dstdir: Path):\n",
+    "def process_item(row, resolution_level: int, model, dstdir: Path, crop:bool = False):\n",
     "    \"\"\"Process a line of the input filelist\n",
     "\n",
     "    Segment the nuclei and measure the FISH signal\n",
@@ -374,14 +326,23 @@
     "    \n",
     "    # identify the channel with nuclar label\n",
     "    nuclear_channel = int(row[[x.lower() == 'nuclei' for x in row]].index.item().replace('channel','')) - 1\n",
-    "\n",
+    "    \n",
     "    # load the image\n",
     "    store = ims(\n",
     "        get_files(dstdir, row, \"ims\"), ResolutionLevelLock=resolution_level, aszarr=True\n",
     "    )\n",
     "    img = da.from_zarr(store)\n",
+    "    \n",
+    "    if crop:\n",
+    "        img = img[:,:,:,0:512,0:512]\n",
     "\n",
     "    nchannels = img.shape[1]\n",
+    "\n",
+    "    # channel indices\n",
+    "    channel_idx = [k for k in range(nchannels) if k != nuclear_channel]\n",
+    "\n",
+    "    # channel names\n",
+    "    channel_str = [row[f'channel{k+1}'] for k in channel_idx]\n",
     "\n",
     "    # segment the cell\n",
     "    labels = model.eval(\n",
@@ -399,16 +360,15 @@
     "    rois = load_regions_as_labels(dstdir, row, labels.shape, resolution_level)\n",
     "    \n",
     "    # preprocess the channels    \n",
-    "    channels = [k for k in range(nchannels) if k != nuclear_channel]\n",
     "    score = np.stack(\n",
     "        [\n",
     "            preprocess(img[0, k].compute().squeeze().astype(np.float32))\n",
-    "            for k in range(nchannels) if k != nuclear_channel\n",
+    "            for k in channel_idx\n",
     "        ],\n",
     "        0,\n",
     "    )\n",
     "\n",
-    "    df = record_intensity(labels, score, rois, channels)\n",
+    "    df = record_intensity(labels, score, rois, channel_str)\n",
     "\n",
     "    df.to_csv(get_files(dstdir, row, \"measurements\"), index=False)\n",
     "\n",
@@ -424,31 +384,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unnamed: 0                                                    1\n",
-      "folder        /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...\n",
-      "name          2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...\n",
+      "folder      /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...\n",
+      "name        2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnal...\n",
+      "channel1                                           tbh_B4_546\n",
+      "channel2                                        LGC007_B3_647\n",
+      "channel3                                         vacht_B2_488\n",
+      "channel4                                               Nuclei\n",
       "Name: 1, dtype: object\n",
-      "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
+      "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/test_15024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
       "\n",
       "GET : .zarray\n",
-      "Unnamed: 0                                                    3\n",
-      "folder        /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...\n",
-      "name          14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...\n",
+      "folder      /media/cephfs/acourtney/HCR_Octopus_Jerome/Feb...\n",
+      "name        14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAna...\n",
+      "channel1                                        LGC009_B1_647\n",
+      "channel2                                         vglut_B4_546\n",
+      "channel3                                            Th_B3_488\n",
+      "channel4                                               Nuclei\n",
       "Name: 3, dtype: object\n",
-      "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims \n",
+      "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/test_15024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims \n",
       "\n",
-      "GET : .zarray\n",
-      "Closing file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims \n",
-      "\n",
-      "Closing file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/2023_12Dec_2a17Dec_F2_Stitched_Cropped_ForAnalysis.ims \n",
-      "\n"
+      "GET : .zarray\n"
      ]
     }
    ],
@@ -457,12 +419,13 @@
     "\n",
     "model = models.Cellpose(gpu=core.use_gpu(), model_type=\"nuclei\")\n",
     "resolution_level = 1\n",
+    "crop = True\n",
     "\n",
     "for row in filelist.iloc:\n",
     "    if get_files(dstdir, row, \"measurements\").exists() is False:\n",
     "        if get_files(dstdir, row, \"regions\").exists() is True:\n",
     "            print(row)\n",
-    "            process_item(row, resolution_level, model, dstdir)"
+    "            process_item(row, resolution_level, model, dstdir, crop)"
    ]
   }
  ],
