--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -419,7 +419,7 @@
     "\n",
     "model = models.Cellpose(gpu=core.use_gpu(), model_type=\"nuclei\")\n",
     "resolution_level = 1\n",
-    "crop = True\n",
+    "crop=False\n",
     "\n",
     "for row in filelist.iloc:\n",
     "    if get_files(dstdir, row, \"measurements\").exists() is False:\n",
