fix numeric column in filelist

--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e55d42aa0f54f9d9de709d3a3714873",
+       "model_id": "9a8e6babb9e44511bbb86dab541e330b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,24 +251,6 @@
     "    return rois\n",
     "\n",
     "\n",
-    "# def preprocess(img):\n",
-    "#     \"\"\"Preprocess the image before FISH intensity measurement\n",
-    "\n",
-    "#     Parameter\n",
-    "#     ---------\n",
-    "#     img : numpy.ndarray\n",
-    "#         input image\n",
-    "#     Result\n",
-    "#     ------\n",
-    "#     numpy.ndarray\n",
-    "#         result\n",
-    "#     \"\"\"\n",
-    "#     img = img.astype(np.float32)\n",
-    "#     d = ndi.gaussian_filter(img, 1) - ndi.gaussian_filter(img, 2)\n",
-    "#     t = 1.48 * np.median(np.abs(d - np.median(d)))\n",
-    "#     return np.maximum(0, d / t - 4)\n",
-    "\n",
-    "\n",
     "def preprocess(img):\n",
     "    \"\"\"Preprocess the image before FISH intensity measurement\n",
     "\n",
@@ -325,7 +307,7 @@
     "    \"\"\"\n",
     "    \n",
     "    # identify the channel with nuclar label\n",
-    "    nuclear_channel = int(row[[x.lower() == 'nuclei' for x in row]].index.item().replace('channel','')) - 1\n",
+    "    nuclear_channel = int(row[[str(x).lower() == 'nuclei' for x in row]].index.item().replace('channel','')) - 1\n",
     "    \n",
     "    # load the image\n",
     "    store = ims(\n",
