--- a/3_Process.ipynb
+++ b/3_Process.ipynb
@@ -330,6 +330,7 @@
     "    label_file = Path(get_files(dstdir, row, \"labels\"))    \n",
     "    if label_file.exists():\n",
     "        print(f'Reusing label {label_file}')\n",
+    "        labels = tifffile.imread(label_file)\n",
     "    else:\n",
     "        labels = model.eval(\n",
     "            img[:, nuclear_channel].compute().squeeze(),\n",
