--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a5d633320c44e28ade691b02b67e82f",
+       "model_id": "20035f5b396b44909c68566c4fc8d62f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "3   vglut_B4_546     Th_B3_488   Nuclei  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "    \n",
     "def get_measurement_channels(df):\n",
     "    \"\"\"List the channels name from the measurement data\"\"\"\n",
-    "    return [c for k, c in enumerate(df.columns) if k > 5]    \n",
+    "    return df.columns[6:]    \n",
     "    \n",
     "def create_heatmaps(labels, df):    \n",
     "    channel_columns = [f'c{k}' for k in range(10) if f'c{k}' in df.columns]\n",
@@ -287,13 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e473664bbd3640e2839e848cd0b5c45f",
+       "model_id": "298ddeae43e54c5cbf6e3bf298ddf927",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,8 +332,6 @@
      "output_type": "stream",
      "text": [
       "Opening readonly file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/test_15024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims \n",
-      "\n",
-      "Closing file: /media/cephfs/acourtney/HCR_Octopus_Jerome/Febuary2024/test_15024/14Aug2023_3b_Slices_F1_Stitched_Cropped_ForAnalysis.ims \n",
       "\n"
      ]
     }
@@ -350,6 +348,36 @@
    "metadata": {},
    "source": [
     "Add codes to the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(get_files(dstdir, row, 'measurements'), index_col=0)\n",
+    "df = pd.DataFrame(df.to_records())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LGC009_B1_647', 'vglut_B4_546', 'Th_B3_488'], dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns[6:]"
    ]
   },
   {
