--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -9,167 +9,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b253352d4f047e7b55016a94ba2af26",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileChooser(path='/home/jeromeb/work/code/octopus', filename='', title='', show_hidden=False, select_desc='Sou…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd6163e5b098457fa36cd826b1a80140",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileChooser(path='/home/jeromeb/work/code/octopus', filename='', title='', show_hidden=False, select_desc='Des…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yaml\n",
     "from pathlib import Path\n",
     "from ipyfilechooser import FileChooser\n",
+    "\n",
     "fc = FileChooser()\n",
-    "srcdir, dstdir = '', ''\n",
+    "srcdir, dstdir = \"\", \"\"\n",
     "if Path(\"config.yml\").exists():\n",
-    "    with open(\"config.yml\", \"r\") as file:    \n",
+    "    with open(\"config.yml\", \"r\") as file:\n",
     "        config = yaml.safe_load(file)\n",
-    "        if 'source' in config.keys():\n",
-    "            srcdir = Path(config[\"source\"])        \n",
-    "        if 'destination' in config.keys():\n",
-    "            dstdir = Path(config[\"destination\"])            \n",
-    "fc1 = FileChooser(srcdir, select_desc='Source')\n",
-    "fc2 = FileChooser(dstdir, select_desc='Destination')\n",
+    "        if \"source\" in config.keys():\n",
+    "            srcdir = Path(config[\"source\"])\n",
+    "        if \"destination\" in config.keys():\n",
+    "            dstdir = Path(config[\"destination\"])\n",
+    "fc1 = FileChooser(srcdir, select_desc=\"Source\")\n",
+    "fc2 = FileChooser(dstdir, select_desc=\"Destination\")\n",
     "display(fc1)\n",
-    "display(fc2)\n"
+    "display(fc2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Source folder: .\n",
-      "Destination folder : .\n",
-      "Output file list : filelist.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "srcdir = Path(fc1.selected) if fc1.selected is not None else Path(srcdir)\n",
     "dstdir = Path(fc2.selected) if fc2.selected is not None else Path(dstdir)\n",
-    "filelistname = dstdir / 'filelist.csv'\n",
+    "filelistname = dstdir / \"filelist.csv\"\n",
     "print(\"Source folder:\", srcdir)\n",
     "print(\"Destination folder :\", dstdir)\n",
     "print(\"Output file list :\", filelistname)\n",
     "# update yaml config file\n",
     "try:\n",
-    "    cnf = yaml.safe_load(f'source: \\\"{srcdir.as_posix()}\\\"\\ndestination: \\\"{dstdir.as_posix()}\\\"\\n')\n",
-    "    with open('config.yml', 'w') as file:\n",
+    "    cnf = yaml.safe_load(\n",
+    "        f'source: \"{srcdir.as_posix()}\"\\ndestination: \"{dstdir.as_posix()}\"\\n'\n",
+    "    )\n",
+    "    with open(\"config.yml\", \"w\") as file:\n",
     "        yaml.dump(cnf, file)\n",
     "except:\n",
-    "    pass\n",
-    "\n"
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>folder</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [folder, name]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "filelist = pd.DataFrame.from_records([{\n",
-    "    'folder': p.parent,\n",
-    "    'name': p.name,\n",
-    "    'channel1': 'ch1',\n",
-    "    'channel2': 'ch2',\n",
-    "    'channel3': 'ch3',\n",
-    "    'channel4': 'nuclei'\n",
-    "    } for p in srcdir.glob('*.ims')])\n",
-    "filelist.to_csv(filelistname)\n",
+    "\n",
+    "filelist = pd.DataFrame.from_records(\n",
+    "    [\n",
+    "        {\n",
+    "            \"folder\": p.parent,\n",
+    "            \"name\": p.name,\n",
+    "            \"channel1\": \"ch1\",\n",
+    "            \"channel2\": \"ch2\",\n",
+    "            \"channel3\": \"ch3\",\n",
+    "            \"channel4\": \"nuclei\",\n",
+    "        }\n",
+    "        for p in srcdir.glob(\"*.ims\")\n",
+    "    ]\n",
+    ")\n",
+    "filelist.to_csv(filelistname, index=False)\n",
+    "\n",
     "filelist"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "imaging",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
