--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -59,6 +59,8 @@
    "source": [
     "from itertools import chain, combinations\n",
     "from functools import partial\n",
+    "from functools import reduce  \n",
+    "import operator\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tifffile\n",
@@ -110,8 +112,37 @@
     "    t = tuple([c for c in channels if row[c] > thresholds[c]])\n",
     "    return encoder[t]\n",
     "\n",
-    "def encode_channels(df, channels, thresholds):\n",
-    "    \"\"\"Encode the channel in the data frame based on intensity (in place)\n",
+    "def encode_channels_exclusive(df, columns, thresholds):\n",
+    "    \"\"\"Encode the channel in the data frame based on intensity \n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "    columns : List[str]\n",
+    "        list of columns names\n",
+    "    thresholds: List[float]\n",
+    "        list of threshold values\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    code_df and encoder, decoder dicts\n",
+    "    \"\"\"\n",
+    "    pset = [x for x in powerset(columns)]\n",
+    "    encoder = {x:k for k,x in enumerate(pset)}\n",
+    "    decoder = {k:x for k,x in enumerate(pset)}\n",
+    "    decoder[0] = ('none',)\n",
+    "    decode_str = {a:b for a,b in enumerate(['+'.join([str(e) for e in k]) for k in encoder.keys()])}\n",
+    "    cid = df.apply(partial(encode, channels=columns, encoder=encoder, thresholds=thresholds), axis=1)\n",
+    "    code_df = pd.DataFrame({     \n",
+    "        'label': df['label'],\n",
+    "        'id': cid})\n",
+    "    return code_df, decoder\n",
+    "\n",
+    "def prod(iterable):\n",
+    "    return reduce(operator.mul, iterable, 1)\n",
+    "\n",
+    "def encode_channels_inclusive(df, columns, thresholds):\n",
+    "    \"\"\"Encode the channel in the data frame based on intensity \n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -123,36 +154,59 @@
     "    \n",
     "    Returns\n",
     "    -------\n",
-    "    encoder decoder dicts\n",
-    "    \"\"\"\n",
-    "    pset = [x for x in powerset(channels)]\n",
-    "    encoder = {x:k for k,x in enumerate(pset)}\n",
-    "    decoder = {k:x for k,x in enumerate(pset)}\n",
-    "    decoder[0] = ('none',)\n",
-    "    df['code id'] = df.apply(partial(encode, channels=channels, encoder=encoder, thresholds=thresholds), axis=1)\n",
-    "    decode_str = {a:b for a,b in enumerate(['+'.join([str(e) for e in k]) for k in encoder.keys()])}\n",
-    "    df['code str'] = [decode_str[k] for k in df['code id']]\n",
-    "    return encoder, decoder\n",
     "\n",
-    "def create_codemap(labels, df, decoder):\n",
+    "    code_df and encoder, decoder dicts\n",
+    "    \"\"\"\n",
+    "    pset = [x for x in powerset(columns)]       \n",
+    "    decoder = {k+1:'+'.join([str(e) for e in x]) for k,x in enumerate(pset[1:])}    \n",
+    "    code_df = pd.DataFrame({\n",
+    "        '+'.join([str(e) for e in k]) : prod([df[e] > thresholds[e] for e in k]) for k in pset[1:]\n",
+    "        })\n",
+    "    code_df['label'] = df['label']\n",
+    "    return code_df, decoder\n",
+    "\n",
+    "def create_class_image(labels, codes, decoder):\n",
     "    \"\"\"Create a map of the binary codes as a label map\n",
     "    \n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    labels: np.array\n",
+    "\n",
+    "    codes: pd.DataFrame\n",
+    "        data frame with a column label and a label code\n",
+    "\n",
+    "    decoder: dict\n",
+    "        dictionary: {id: tuple(combination columns names)}\n",
+    "\n",
     "    Note add 1 to the code so that it is not set to background\n",
     "    \"\"\"\n",
     "    stack = np.zeros(labels.shape, dtype=np.uint8)\n",
-    "    for row in df.iloc:\n",
-    "        stack[labels == row['label']] = row['code id'] + 1        \n",
+    "    for row in codes.iloc:\n",
+    "        stack[labels == row['label']] = row['id'] + 1        \n",
     "    features = pd.DataFrame({'code':[ 'background', *[' + '.join(decoder[k]) for k in decoder ]]})\n",
     "    return stack, features\n",
     "\n",
-    "def create_maps(labels, df, decoder):\n",
-    "    \"\"\"Create a set of maps for each combination of labels\"\"\"\n",
+    "def create_class_masks(labels, codes, decoder):\n",
+    "    \"\"\"Create a set of maps for each combination of labels\n",
+    "    \n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    labels: np.array\n",
+    "\n",
+    "    codes: pd.DataFrame\n",
+    "        data frame with a column label and a column per combination\n",
+    "\n",
+    "    decoder: dict\n",
+    "        dictionary: {id: tuple(combination columns names)}    \n",
+    "\n",
+    "    \"\"\"\n",
     "    nc = len(decoder)\n",
     "    stack = np.zeros([nc, *labels.shape], dtype=np.uint8)\n",
-    "    for row in df.iloc:\n",
-    "        c = row['code id']        \n",
-    "        stack[c][labels == row['label']] = 255    \n",
-    "    names = [' + '.join(decoder[k]) for k in decoder ]\n",
+    "    for row in codes.iloc:        \n",
+    "        for c in decoder:\n",
+    "            if row[decoder[c]] == 1:\n",
+    "                stack[c-1][labels == row['label']] = 255    \n",
+    "    names = [decoder[k] for k in decoder ]    \n",
     "    return stack, names\n",
     "    \n",
     "def aggregate_combinations(input, decoder):\n",
@@ -172,7 +226,10 @@
     "                for y1 in decoder[k1]:\n",
     "                    if y1 in decoder[k2]:\n",
     "                        output[k1] = output[k1] + input[k2]\n",
-    "    return output\n"
+    "    return output\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -232,15 +289,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns[6:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "labels = tifffile.imread(get_files(dstdir, row, 'labels'))\n",
     "\n",
     "df = pd.read_csv(get_files(dstdir, row, 'measurements'), index_col=0)\n",
@@ -254,7 +302,8 @@
     "for k,c in enumerate(channels):\n",
     "    df[f'z{k}'] = (df[c] - df[c].median()) / madstd(df[c])\n",
     "\n",
-    "encoder, decoder = encode_channels(df, channels, thresholds)\n"
+    "codes_in, decoder_in = encode_channels_inclusive(df, channels, thresholds)\n",
+    "codes_ex, decoder_ex = encode_channels_exclusive(df, channels, thresholds)\n"
    ]
   },
   {
@@ -270,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "codemaps, features = create_codemap(labels, df, decoder)"
+    "codemaps, features = create_class_image(labels, codes_ex, decoder_ex)"
    ]
   },
   {
@@ -279,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maps, names = create_maps(labels, df, decoder)"
+    "maps, names = create_class_masks(labels, codes_in, decoder_in)"
    ]
   },
   {
@@ -300,29 +349,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute aggregated maps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mapsagg = aggregate_combinations(maps, {k: tuple(c.split(' + ')) for k,c  in enumerate(names)} )\n",
-    "import matplotlib.pyplot as plt\n",
-    "fig, ax = plt.subplots(1,len(names),figsize=(20,5))\n",
-    "for k in range(len(names)):         \n",
-    "    ax[k].imshow(np.amax(mapsagg[k,:,::4,::4],0), cmap='gray')\n",
-    "    ax[k].set(title=names[k])\n",
-    "    ax[k].title.set_fontsize(5)\n",
-    "    ax[k].set_axis_off()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Visualize the result\n",
     "- toggle the label layer to visualize the codes\n",
     "- on the codemaps layer, tick the 'show selected' option and run through the labels to display the cells code by code"
@@ -336,36 +362,14 @@
    "source": [
     "v = napari.view_image(img, channel_axis=1, name=[row[f'channel{k+1}'] for k in range(img.shape[1])])\n",
     "v.add_labels(labels)\n",
-    "v.add_image(mapsagg,channel_axis=0,name=names)"
+    "v.add_image(maps,channel_axis=0,name=names)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical analysis and figure\n",
-    "## Without aggregation by set labels\n",
-    "We first count the number of cell in each class and create a pivot table to visualize the results. Here the results are by class before aggregation of the sets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tbl = pd.pivot_table(df.groupby(['roi','code str'])['label'].agg('count').to_frame(), values='label', index='roi',columns='code str').fillna(0)\n",
-    "tbl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tbl.T.plot(kind='barh')\n",
-    "plt.title(f\"Count of cell class in each region {row['name']}\");"
+    "# Statistical analysis and figure\n"
    ]
   },
   {
@@ -381,9 +385,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relative = 100*tbl.div(tbl.sum(axis=1), axis=0)\n",
-    "relative.to_csv(get_files(dstdir, row, 'stats'))\n",
-    "relative"
+    "tbl = codes_in.merge(df[['label','roi']],on='label').drop(columns=['label']).groupby('roi').agg('sum')\n",
+    "tbl"
    ]
   },
   {
@@ -392,63 +395,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "relative.T.plot(kind='barh')\n",
-    "plt.title(f\"Proportion of cell class in each region {row['name']}\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Aggregating cells in sets\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tblagg = aggregate_combinations(tbl,{c: tuple(c.split('+')) for c  in tbl.columns} )\n",
-    "tblagg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tblagg.T.plot(kind='barh')\n",
-    "plt.title(f\"Count of cell label in each region {row['name']}\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can again compute the proportion of cells in each set. Here the total is still the same as before."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relativeagg = 100*tblagg.div(tbl.sum(axis=1), axis=0)\n",
-    "relative.to_csv(get_files(dstdir, row, 'stats'))\n",
-    "relativeagg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relativeagg.T.plot(kind='barh')\n",
-    "plt.title(f\"Proportion of cell class in each region {row['name']}\");"
+    "import seaborn as sns\n",
+    "\n",
+    "sns.heatmap(tbl.T)"
    ]
   }
  ],
