--- a/2_Select_ROI.ipynb
+++ b/2_Select_ROI.ipynb
@@ -103,6 +103,7 @@
     "            'labels': get_files(dstdir, row, 'labels'),\n",
     "            'measurements':  get_files(dstdir, row, 'measurements')\n",
     "        }\n",
+    "    \n",
     "row = filelist.iloc[w.value]\n",
     "filename = get_files(dstdir, row, 'ims')\n",
     "regionname = get_files(dstdir, row, 'regions')\n",
@@ -219,22 +220,9 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "imaging",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
