fractins in cell counts, intensity maps for easier threshold adjustments

--- a/1_Scan_folder.ipynb
+++ b/1_Scan_folder.ipynb
@@ -26,7 +26,7 @@
     "            srcdir = Path(config[\"source\"])\n",
     "        if \"destination\" in config.keys():\n",
     "            dstdir = Path(config[\"destination\"])\n",
-    "fc1 = FileChooser(srcdir, select_desc=\"Source\")\n",
+    "fc1 = FileChooser(srcdir.parent, select_desc=\"Source\")\n",
     "fc2 = FileChooser(dstdir, select_desc=\"Destination\")\n",
     "display(fc1)\n",
     "display(fc2)"
