add codemaps figure

--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -483,7 +483,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "codemaps, features = create_class_image(labels, codes_ex, decoder_ex)"
+    "codemaps, features = create_class_image(labels, codes_ex, decoder_ex)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(codemaps.max()-codemaps[codemaps.shape[0]//2],cmap='Set1',interpolation=None)\n",
+    "plt.axis('off')\n",
+    "plt.title('Exclusive labels')"
    ]
   },
   {
@@ -500,6 +511,13 @@
    "outputs": [],
    "source": [
     "maps, names = create_class_masks(labels, codes_in, decoder_in)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualization of each inclusive labels"
    ]
   },
   {
@@ -520,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the result\n",
+    "Visualize the result in 3D using napari\n",
     "- toggle the label layer to visualize the codes\n",
     "- on the codemaps layer, tick the 'show selected' option and run through the labels to display the cells code by code"
    ]
