add visualization of codes by regions

--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -401,6 +401,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -416,14 +425,14 @@
     "# default thresholds\n",
     "thresholds = {c: df[c].median() + 0.5 * madstd(df[c]) for c in channels}\n",
     "# custom threshold\n",
-    "thresholds = {\"tbh\": 0.5, \"LGC007\": 0.1, \"vacht\": 0.1}\n",
-    "fig, ax = plt.subplots(1, len(channels))\n",
-    "for k, ch in enumerate(channels):\n",
-    "    ax[k].imshow(\n",
-    "        cell_intensity[k, cell_intensity.shape[1] // 2] > thresholds[ch], cmap=\"gray\"\n",
-    "    )\n",
-    "    ax[k].set_axis_off()\n",
-    "    ax[k].set_title(f\"{ch}>{thresholds[ch]:.2f}\")"
+    "# thresholds = {\"tbh\": 0.5, \"LGC007\": 0.1, \"vacht\": 0.1}\n",
+    "# fig, ax = plt.subplots(1, len(channels))\n",
+    "# for k, ch in enumerate(channels):\n",
+    "#     ax[k].imshow(\n",
+    "#         cell_intensity[k, cell_intensity.shape[1] // 2] > thresholds[ch], cmap=\"gray\"\n",
+    "#     )\n",
+    "#     ax[k].set_axis_off()\n",
+    "#     ax[k].set_title(f\"{ch}>{thresholds[ch]:.2f}\")"
    ]
   },
   {
@@ -532,6 +541,43 @@
     "    ax[k].set(title=names[k])\n",
     "    ax[k].title.set_fontsize(5)\n",
     "    ax[k].set_axis_off()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualization of inclusive labels by regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first we retrieve the regions for each label\n",
+    "codes_in = codes_in.merge(df[['label','roi']])\n",
+    "codes_ex = codes_ex.merge(df[['label','roi']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(3, 7, figsize=(20, 15)) # adjust to the number of ROI and channels combinations\n",
+    "# loop over each region \n",
+    "for i, r in enumerate(sorted(codes_in['roi'].unique())):\n",
+    "    if r > 0:\n",
+    "        maps_r, names = create_class_masks(labels, codes_in[codes_in['roi']==r], decoder_in)\n",
+    "        # for each code:\n",
+    "        for k in range(len(names)):\n",
+    "            ax[i-1,k].imshow(np.amax(maps_r[k, :, ::4, ::4], 0), cmap=\"gray\")\n",
+    "            ax[i-1,k].set(title=names[k])\n",
+    "            ax[i-1,k].title.set_fontsize(5)\n",
+    "            ax[i-1,k].set_axis_off()"
    ]
   },
   {
