reduction of number of channels

--- a/4_Visualization.ipynb
+++ b/4_Visualization.ipynb
@@ -322,6 +322,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pset = [x for x in powerset(channels)]\n",
+    "pset[0]=('none',)\n",
+    "pset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reduce_channels(channels, channels_to_keep, codes_ex, decoder_ex):\n",
+    "    \"\"\" Compute the mapping between two difference set of channels\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------    \n",
+    "    channels: Iterable\n",
+    "        original list of channels\n",
+    "    channels_to_keep : Iterable\n",
+    "        list of channels to keep\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    a dictionnary mapping the orignal set to the new one\n",
+    "    \"\"\"\n",
+    "    pset = [x for x in powerset(channels)]        \n",
+    "    pset_keep = [x for x in powerset(channels_to_keep)]        \n",
+    "    # map channel combination set to the one to keep\n",
+    "    channels_set_mapping = {}\n",
+    "    for x in pset:\n",
+    "        z = []\n",
+    "        for y in pset_keep:                \n",
+    "            if (set(x) & set(y)) == set(y):\n",
+    "                z.append(y)   \n",
+    "        if x == ():\n",
+    "            channels_set_mapping[('none',)] = ('none',)\n",
+    "        else:\n",
+    "            channels_set_mapping[x] = sorted(z,key=len)[-1]\n",
+    "            if channels_set_mapping[x] == ():\n",
+    "                channels_set_mapping[x] = ('none',)    \n",
+    "    # create new codes and decoders\n",
+    "    decoder_ex_keep = {k:x for k,x in enumerate(pset_keep)}\n",
+    "    decoder_ex_keep[0] = ('none',)\n",
+    "    encoder_ex_keep = {decoder_ex_keep[k]:k for k in decoder_ex_keep}\n",
+    "    mapper = {k:encoder_ex_keep[channels_set_mapping[decoder_ex[k]]] for k in decoder_ex}\n",
+    "    codes_ex_keep = codes_ex.copy()\n",
+    "    codes_ex_keep['id'] = codes_ex['id'].apply(lambda x:mapper[x])\n",
+    "    return codes_ex_keep, encoder_ex_keep\n",
+    "\n",
+    "codes_ex_keep, decoder_ex_keep = reduce_channels(channels, ('LGC009', 'vglut'), codes_ex, decoder_ex)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import ipywidgets as widgets\n",
     "\n",
     "w = widgets.Dropdown(\n",
@@ -381,7 +440,8 @@
     "df = pd.read_csv(get_files(dstdir, row, \"measurements\"), index_col=0)\n",
     "df = pd.DataFrame(df.to_records())\n",
     "\n",
-    "channels = get_measurement_channels(df)"
+    "channels = get_measurement_channels(df)\n",
+    "print(channels)"
    ]
   },
   {
@@ -398,15 +458,6 @@
    "outputs": [],
    "source": [
     "cell_intensity = map_intensity(labels, df, channels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels"
    ]
   },
   {
@@ -453,6 +504,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channels_to_keep = ['LGC009','vglut']\n",
+    "codes_ex, decoder_ex = encode_channels_exclusive(df, channels_to_keep, thresholds)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decoder_ex"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -492,7 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "codemaps, features = create_class_image(labels, codes_ex, decoder_ex)\n"
+    "codemaps, features = create_class_image(labels, codes_ex, decoder_ex)"
    ]
   },
   {
